Document Editor rendering changes for version 7.0

--- a/upgrade/rendering-changes/7-0-0.md
+++ b/upgrade/rendering-changes/7-0-0.md
@@ -9,6 +9,7 @@ position: 970
 # Rendering Changes in 7.0.0
 
 * [AIPrompt](#aiprompt)
+* [Editor](#editor)
 * [Gantt](#gantt)
 * [Menu](#menu)
 * [PanelBar](#panelbar)
@@ -22,6 +23,14 @@ position: 970
 1. The view buttons in the toolbar are now fully rounded (`k-rounded-md` class is replaced with `k-rounded-full`). The same applies to the `Generate` button.
 2. The output view, which contains the `<div class="k-card-list">` element, is now wrapped in a `<div>` element with class `k-prompt-view`.
 3. The copy button in the output view is now styled as primary.
+
+## Editor
+
+* The `<div class="k-form">` elements in the popups of the [`CreateLink` and `InsertImage` tools]({%slug editor-built-in-tools%}) no longer render a `k-form-horizontal` class.
+* The `ViewHtml` tool popup no longer renders `div.k-form`, `div.k-form-field`, and `div.k-form-field-wrap` elements.
+* The `<label class="k-form-label">` elements in the above three popups also render a `k-label` class.
+* The popup windows (`<div class="k-window">` elements) for the `CreateLink` and `InsertImage` tools are `340px` wide by default.
+* The popup window for the `ViewHtml` tool is `500px` wide and `400px` high by default.
 
 ## Gantt
 
