--- a/upgrade/rendering-changes/7-0-0.md
+++ b/upgrade/rendering-changes/7-0-0.md
@@ -69,7 +69,7 @@ The `Open`, `Download` and `Print` tools have been moved to a submenu toggled on
 
 ## TileLayout
 
-The tile elements (`<div class="k-tilelayout-item">`) render `tabindex="-1"` instead of `tabindex="0"` when the `Navigable` parameter of the TileLayout is `false`, which is by default.
+The tile elements (`<div class="k-tilelayout-item">`) render `tabindex="-1"` instead of `tabindex="0"` when the `Navigable` parameter of the TileLayout is `false`, which is the default setting.
 
 ## TreeList
 
