docs(common): Add TileLayout to rendering changes for 7.0 (#2521)
* docs(common): Add TileLayout to rendering changes for 7.0

* Update upgrade/rendering-changes/7-0-0.md

Co-authored-by: Iva Stefanova Koevska-Atanasova <koevska@progress.com>

---------

Co-authored-by: Iva Stefanova Koevska-Atanasova <koevska@progress.com>

--- a/upgrade/rendering-changes/7-0-0.md
+++ b/upgrade/rendering-changes/7-0-0.md
@@ -16,6 +16,7 @@ position: 970
 * [PDFViewer](#pdfviewer)
 * [Signature](#signature)
 * [TabStrip](#tabstrip)
+* [TileLayout](#tilelayout)
 * [TreeList](#treelist)
 
 ## AIPrompt
@@ -65,6 +66,10 @@ The `Open`, `Download` and `Print` tools have been moved to a submenu toggled on
 2. The inactive tabs no longer include the `k-state-default` class.
 3. The scroll buttons (prev & next) now render the `k-tabstrip-prev` and `k-tabstrip-next` classes, respectively.
 4. The `k-pos-relative` class is no longer applied to the `<div class="k-tabstrip">` element. The component now receives an inline `position: relative` style instead.
+
+## TileLayout
+
+The tile elements (`<div class="k-tilelayout-item">`) render `tabindex="-1"` instead of `tabindex="0"` when the `Navigable` parameter of the TileLayout is `false`, which is the default setting.
 
 ## TreeList
 
