--- a/upgrade/breaking-changes/3-0-0.md
+++ b/upgrade/breaking-changes/3-0-0.md
@@ -28,7 +28,6 @@ Note the following changes when using manual data operations:
 
 >caption OnRead Usage in UI for Blazor up to version 2.30 and after version 3.0
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -38,7 +37,7 @@ Note the following changes when using manual data operations:
         <tr>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikComboBox Data="@ComboData"
                  OnRead="@OnComboRead"
                  TotalCount="@ComboTotal" />
@@ -76,7 +75,7 @@ Note the following changes when using manual data operations:
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikComboBox TItem="@Product"
                  TValue="@int"
                  OnRead="@OnComboRead" />
@@ -124,7 +123,7 @@ Note the following changes when using manual data operations:
 
 >caption Popup configuration in UI for Blazor up to version 2.30 and after version 3.0
 
-<div class="skip-repl"></div>
+
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -134,7 +133,7 @@ Note the following changes when using manual data operations:
         <tr>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikComboBox PopupClass="my-class"
                  PopupHeight="200px"
                  PopupWidth="150px">
@@ -147,7 +146,7 @@ Note the following changes when using manual data operations:
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikComboBox>
     <ComboBoxSettings>
         <ComboBoxPopupSettings Class="my-class"
@@ -179,7 +178,6 @@ Note the following changes when using manual data operations:
 
 >caption Grid export stream in UI for Blazor up to version 2.30 and after version 3.0
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -189,7 +187,7 @@ Note the following changes when using manual data operations:
         <tr>
 <td>
 
-````C#
+````C#.skip-repl
 TelerikGrid<GridModel> GridRef { get; set; }
 
 void ExportToExcel()
@@ -203,12 +201,13 @@ void ExportToCsv()
 }
 
 
+
 ````
 
 </td>
 <td>
 
-````C#
+````C#.skip-repl
 TelerikGrid<GridModel> GridRef { get; set; }
 
 async Task ExportToExcel()
@@ -231,7 +230,6 @@ async Task ExportToCsv()
 
 >caption Expand Grid rows in UI for Blazor up to version 2.30 and after version 3.0
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -241,7 +239,7 @@ async Task ExportToCsv()
         <tr>
 <td>
 
-````C#
+````C#.skip-repl
 List<GridModel> GridData { get; set; }
 
 async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
@@ -257,7 +255,7 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
 </td>
 <td>
 
-````C#
+````C#.skip-repl
 List<GridModel> GridData { get; set; }
 
 async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
@@ -279,7 +277,7 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
 
 >caption Primary Button style in UI for Blazor up to version 2.30 and after version 3.0
 
-<div class="skip-repl"></div>
+
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -289,7 +287,7 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
         <tr>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikButton
     Primary="true" />
 
@@ -299,7 +297,7 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikButton
     ThemeColor="@ThemeConstants.Button.ThemeColor.Primary" />
 ````
@@ -316,7 +314,6 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
 
 >caption Loader and LoaderContainer in UI for Blazor up to version 2.30 and after version 3.0
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -326,7 +323,7 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
         <tr>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikLoader
     Size="@LoaderSize.Large"
     ThemeColor="@ThemeColors.Tertiary" />
@@ -339,12 +336,13 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
 
 
 
+
 ````
 
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikLoader
     Size="@ThemeConstants.Loader.Size.Large"
     ThemeColor="@ThemeConstants.Loader.ThemeColor.Tertiary" />
@@ -363,7 +361,6 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
 
 >caption TextBox Label in UI for Blazor up to version 2.30 and after version 3.0
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -373,7 +370,7 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
         <tr>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikTextBox
     @bind-Value="@Value"
     Label="First Name*:" />
@@ -384,7 +381,7 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikFloatingLabel Text="First Name*:">
     <TelerikTextBox
         @bind-Value="@Value" />
@@ -400,7 +397,6 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
 
 >caption TileLayout resize and reorder events in UI for Blazor up to version 2.30 and after version 3.0
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -410,7 +406,7 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
         <tr>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikTileLayout Resizable="true"
                    Reorderable="true"
                    OnReorder="@OnReorderHandler"
@@ -438,12 +434,13 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
 }
 
 
+
 ````
 
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikTileLayout Resizable="true"
                    Reorderable="true"
                    OnReorder="@OnReorderHandler"
@@ -483,7 +480,6 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
 
 >caption TreeView expanded items in UI for Blazor up to version 2.30 and after version 3.0
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -493,7 +489,7 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
         <tr>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikTreeView Data="@TreeData">
 
     <TreeViewBindings>
@@ -525,7 +521,7 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikTreeView Data="@TreeData"
                  @bind-ExpandedItems="@ExpandedItems">
     <TreeViewBindings>
@@ -544,6 +540,7 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
         // expanded items depend on
         ExpandedItems = TreeData.Where(x => x.HasChildren == true).ToList();
     }
+
 
     public class TreeItem
     {
@@ -587,7 +584,6 @@ Some CSS classes related to component state were renamed.
 
 The `k-widget` CSS class was removed from all components. If you use this class in custom CSS code, replace it with the corresponding component-specific classes.
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -597,7 +593,7 @@ The `k-widget` CSS class was removed from all components. If you use this class 
         <tr>
 <td>
 
-````HTML
+````HTML.skip-repl
 <div class="k-widget k-grid"></div>
 <span class="k-widget k-combobox"></span>
 
@@ -612,7 +608,7 @@ The `k-widget` CSS class was removed from all components. If you use this class 
 </td>
 <td>
 
-````HTML
+````HTML.skip-repl
 <div class="k-grid"></div>
 <span class="k-combobox"></span>
 
