--- a/upgrade/breaking-changes/4-0-0.md
+++ b/upgrade/breaking-changes/4-0-0.md
@@ -26,7 +26,6 @@ To define custom icon classes inline, use `Icon="@( "my-icon-class" )"`.
 
 To use Telerik font icons with UI for Blazor 4.6.0 and above, [register `font-icons.css`]({%slug common-features-icons%}#font-icon-stylesheet).
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -37,7 +36,7 @@ To use Telerik font icons with UI for Blazor 4.6.0 and above, [register `font-ic
 <td>
 
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikButton Icon="save"> Font Icon Button </TelerikButton>
 
 <GridCommandButton Icon="save"> Font Icon Command Button </GridCommandButton>
@@ -48,7 +47,7 @@ To use Telerik font icons with UI for Blazor 4.6.0 and above, [register `font-ic
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikButton Icon="@SvgIcon.Save"> SVG Icon Button </TelerikButton>
 
 <GridCommandButton Icon="@SvgIcon.Save"> SVG Icon Command Button </GridCommandButton>
@@ -133,7 +132,6 @@ Removed the `Shape` parameter from:
 
 >caption Stretched enum value in UI for Blazor up to version 3.7.0 and after version 4.0.0
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -143,7 +141,7 @@ Removed the `Shape` parameter from:
         <tr>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <CardActions Layout="@CardActionsLayout.Stretched" />
 
 <TelerikDialog ButtonsLayout="@DialogButtonsLayout.Stretched" />
@@ -158,7 +156,7 @@ Removed the `Shape` parameter from:
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <CardActions Layout="@CardActionsLayout.Stretch" />
 
 <TelerikDialog ButtonsLayout="@DialogButtonsLayout.Stretch" />
@@ -181,7 +179,6 @@ Added an `Async` suffix to the name of asynchronous methods.
 
 >caption Method signatures in UI for Blazor up to version 3.7.0 and after version 4.0.0
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -191,7 +188,7 @@ Added an `Async` suffix to the name of asynchronous methods.
         <tr>
 <td>
 
-````C#
+````C#.skip-repl
 private TelerikGrid GridRef { get; set; }
 // ...
 await GridRef.SetState(desiredState);
@@ -206,7 +203,7 @@ await TreeListRef.SetState(desiredState);
 </td>
 <td>
 
-````C#
+````C#.skip-repl
 private TelerikGrid GridRef { get; set; }
 // ...
 await GridRef.SetStateAsync(desiredState);
@@ -233,7 +230,6 @@ This section describes changes per component.
 
 >caption Visible parameter in UI for Blazor up to version 3.7.0 and after version 4.0.0
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -243,14 +239,14 @@ This section describes changes per component.
         <tr>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikButton Hidden="false"> Visible button <TelerikButton />
 ````
 
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikButton Visible="true"> Visible button <TelerikButton />
 ````
 
@@ -269,7 +265,6 @@ This section describes changes per component.
 
 >caption DrawerPosition enum values in UI for Blazor up to version 3.7.0 and after version 4.0.0
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -279,7 +274,7 @@ This section describes changes per component.
         <tr>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikDrawer Position="@DrawerPosition.Left">
 <TelerikDrawer Position="@DrawerPosition.Right">
 ````
@@ -287,7 +282,7 @@ This section describes changes per component.
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikDrawer Position="@DrawerPosition.Start">
 <TelerikDrawer Position="@DrawerPosition.End">
 ````
@@ -325,7 +320,6 @@ This section describes changes per component.
 
 >caption Placeholder parameter in UI for Blazor up to version 3.7.0 and after version 4.0.0
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -335,14 +329,14 @@ This section describes changes per component.
         <tr>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikMaskedTextBox PlaceHolder="The placeholder text" />
 ````
 
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikMaskedTextBox Placeholder="The placeholder text" />
 ````
 
@@ -357,7 +351,6 @@ This section describes changes per component.
 
 >caption Placeholder parameter in UI for Blazor up to version 3.7.0 and after version 4.0.0
 
-<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -367,14 +360,14 @@ This section describes changes per component.
         <tr>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikTextArea PlaceHolder="The placeholder text" />
 ````
 
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikTextArea Placeholder="The placeholder text" />
 ````
 
@@ -398,14 +391,14 @@ This section describes changes per component.
         <tr>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikTextBox PlaceHolder="The placeholder text" />
 ````
 
 </td>
 <td>
 
-````RAZOR
+````RAZOR.skip-repl
 <TelerikTextBox Placeholder="The placeholder text" />
 ````
 
