Fix: Fix some wrong MD files

--- a/upgrade/breaking-changes/3-0-0.md
+++ b/upgrade/breaking-changes/3-0-0.md
@@ -35,7 +35,7 @@ Note the following changes when using manual data operations:
     </tr></thead>
     <tbody>
         <tr>
-<td>
+<td style="vertical-align:top">
 
 ````RAZOR.skip-repl
 <TelerikComboBox Data="@ComboData"
@@ -45,35 +45,32 @@ Note the following changes when using manual data operations:
 <TelerikGrid Data="@GridData"
              OnRead="@OnGridRead"
              TotalCount="@GridTotal" />
+````
 
-@code {
-    List<Product> SourceData { get; set; } = new();
-    List<Product> ComboData { get; set; }
-    List<Product> GridData { get; set; }
-    int ComboTotal { get; set; } = 0;
-    int GridTotal { get; set; } = 0;
+````RAZOR.skip-repl
 
-    protected void OnComboRead(ComboBoxReadEventArgs args)
-    {
-        var result = SourceData.ToDataSourceResult(args.Request);
 
-        ComboData = result.Data.Cast<Product>().ToList();
-        ComboTotal = result.Total;
-    }
-
-    protected void OnGridRead(GridReadEventArgs args)
-    {
-        var result = SourceData.ToDataSourceResult(args.Request);
-
-        GridData = result.Data.Cast<Product>().ToList();
-        GridTotal = result.Total;
-        // aggregates N/A
-    }
+List<Product> SourceData { get; set; } = new();
+List<Product> ComboData { get; set; }
+List<Product> GridData { get; set; }
+int ComboTotal { get; set; } = 0;
+int GridTotal { get; set; } = 0;
+protected void OnComboRead(ComboBoxReadEventArgs args)
+{
+    var result = SourceData.ToDataSourceResult(args.Request);
+    ComboData = result.Data.Cast<Product>().ToList();
+    ComboTotal = result.Total;
 }
-
+protected void OnGridRead(GridReadEventArgs args)
+{
+    var result = SourceData.ToDataSourceResult(args.Request);
+    GridData = result.Data.Cast<Product>().ToList();
+    GridTotal = result.Total;
+    // aggregates N/A
+}
 ````
 </td>
-<td>
+<td style="vertical-align:top">
 
 ````RAZOR.skip-repl
 <TelerikComboBox TItem="@Product"
@@ -83,30 +80,28 @@ Note the following changes when using manual data operations:
 <TelerikGrid TItem="@Product"
              OnRead="@OnGridRead" />
 
-@code{
-    List<Product> SourceData { get; set; } = new();
 
-    protected void OnComboRead(ComboBoxReadEventArgs args)
-    {
-        var result = SourceData.ToDataSourceResult(args.Request);
+````
 
-        args.Data = result.Data;
-        args.Total = result.Total;
-    }
+````RAZOR.skip-repl
 
-    protected void OnGridRead(GridReadEventArgs args)
-    {
-        var result = SourceData.ToDataSourceResult(args.Request);
 
-        args.Data = result.Data;
-        args.Total = result.Total;
-        args.AggregateResults = result.AggregateResults;
-    }
+List<Product> SourceData { get; set; } = new();
+protected void OnComboRead(ComboBoxReadEventArgs args)
+{
+    var result = SourceData.ToDataSourceResult(args.Request);
+    args.Data = result.Data;
+    args.Total = result.Total;
+}
+protected void OnGridRead(GridReadEventArgs args)
+{
+    var result = SourceData.ToDataSourceResult(args.Request);
+    args.Data = result.Data;
+    args.Total = result.Total;
+    args.AggregateResults = result.AggregateResults;
 }
 
-
-
-
+ 
 
 
 
@@ -496,26 +491,23 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
         <TreeViewBinding ExpandedField="IsExpanded" />
     </TreeViewBindings>
 </TelerikTreeView>
+````
 
-@code{
+````RAZOR.skip-repl
 
-    IEnumerable<TreeItem> TreeData { get; set; }
+IEnumerable<TreeItem> TreeData { get; set; }
 
-
-
-    protected override void OnInitialized()
-    {
-        // expanded items depend on
-        // the IsExpanded value of each item
-
-    }
-
-    public class TreeItem
-    {
-        public bool IsExpanded { get; set; }
-    }
-
+protected override void OnInitialized()
+{
+    // expanded items depend on
+    // the IsExpanded value of each item
 }
+public class TreeItem
+{
+    public bool IsExpanded { get; set; }
+}
+
+
 ````
 
 </td>
@@ -528,24 +520,20 @@ async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
         <TreeViewBinding />
     </TreeViewBindings>
 </TelerikTreeView>
+````
 
-@code{
+````RAZOR.skip-repl
 
-    IEnumerable<TreeItem> TreeData { get; set; }
-    IEnumerable<object> ExpandedItems { get; set; }
-        = new List<TreeItem>();
-
-    protected override void OnInitialized()
-    {
-        // expanded items depend on
-        ExpandedItems = TreeData.Where(x => x.HasChildren == true).ToList();
-    }
-
-
-    public class TreeItem
-    {
-
-    }
+IEnumerable<TreeItem> TreeData { get; set; }
+IEnumerable<object> ExpandedItems { get; set; }
+    = new List<TreeItem>();
+protected override void OnInitialized()
+{
+    // expanded items depend on
+    ExpandedItems = TreeData.Where(x => x.HasChildren == true).ToList();
+}
+public class TreeItem
+{
 }
 ````
 
