--- a/upgrade/breaking-changes/4-0-0.md
+++ b/upgrade/breaking-changes/4-0-0.md
@@ -143,13 +143,21 @@ Removed the `Shape` parameter from:
 
 ````RAZOR.skip-repl
 <CardActions Layout="@CardActionsLayout.Stretched" />
+````
 
+````RAZOR.skip-repl
 <TelerikDialog ButtonsLayout="@DialogButtonsLayout.Stretched" />
+````
 
+````RAZOR.skip-repl
 <GridPopupEditFormSettings ButtonsLayout="@FormButtonsLayout.Stretched" />
+````
 
+````RAZOR.skip-repl
 <SchedulerPopupEditFormSettings ButtonsLayout="@FormButtonsLayout.Stretched" />
+````
 
+````RAZOR.skip-repl
 <TreeListPopupEditFormSettings ButtonsLayout="@FormButtonsLayout.Stretched" />
 ````
 
@@ -158,13 +166,21 @@ Removed the `Shape` parameter from:
 
 ````RAZOR.skip-repl
 <CardActions Layout="@CardActionsLayout.Stretch" />
+````
 
+````RAZOR.skip-repl
 <TelerikDialog ButtonsLayout="@DialogButtonsLayout.Stretch" />
+````
 
+````RAZOR.skip-repl
 <GridPopupEditFormSettings ButtonsLayout="@FormButtonsLayout.Stretch" />
+````
 
+````RAZOR.skip-repl
 <SchedulerPopupEditFormSettings ButtonsLayout="@FormButtonsLayout.Stretch" />
+````
 
+````RAZOR.skip-repl
 <TreeListPopupEditFormSettings ButtonsLayout="@FormButtonsLayout.Stretch" />
 ````
 
@@ -192,9 +208,9 @@ Added an `Async` suffix to the name of asynchronous methods.
 private TelerikGrid GridRef { get; set; }
 // ...
 await GridRef.SetState(desiredState);
+````
 
-// ...
-
+````C#.skip-repl
 private TelerikTreeList TreeListRef { get; set; }
 // ...
 await TreeListRef.SetState(desiredState);
@@ -207,9 +223,9 @@ await TreeListRef.SetState(desiredState);
 private TelerikGrid GridRef { get; set; }
 // ...
 await GridRef.SetStateAsync(desiredState);
+````
 
-// ...
-
+````C#.skip-repl
 private TelerikTreeList TreeListRef { get; set; }
 // ...
 await TreeListRef.SetStateAsync(desiredState);
