docs(grid): Document breaking change in column template component usage

--- a/upgrade/breaking-changes/7-0-0.md
+++ b/upgrade/breaking-changes/7-0-0.md
@@ -44,6 +44,40 @@ The obsolete `ClearButton` parameter is removed. Use `ShowClearButton` instead.
 * The obsolete `AutoFitColumns()` method is removed. Use `AutoFitColumnsAsync()` instead.
 * The obsolete `AutoFitAllColumns()` method is removed. Use `AutoFitAllColumnsAsync()` instead.
 * When using [grouping and `OnRead`]({%slug components/grid/manual-operations%}#grouping-with-onread), casting `DataSourceResult.Data` to a list of objects (`.Cast<object>()`) is no longer needed.
+* [Components in a Grid column `<Template>` require a `@key`]({%slug grid-templates-column%}#using-components-in-grid-column-templates) in order to display correct values after data operations like sorting, filtering, paging, and others.
+
+>caption Using custom components in Grid column templates up to version 6.2.0 and after version 7.0.0
+
+<table>
+    <thead><tr>
+        <th>UI for Blazor 6.2.0</th>
+        <th>UI for Blazor 7.0.0</th>
+    </tr></thead>
+    <tbody>
+        <tr>
+            <td style="vertical-align:top">
+<pre><code>
+&lt;GridColumn&gt;
+    &lt;Template&gt;
+        @{ var dataItem = (GridModel)context; }
+        &lt;ChildComponent /&gt;
+    &lt;/Template&gt;
+&lt;/GridColumn&gt;
+</code></pre>
+            </td>
+            <td style="vertical-align:top">
+<pre><code>
+&lt;GridColumn&gt;
+    &lt;Template&gt;
+        @{ var dataItem = (GridModel)context; }
+        &lt;ChildComponent <strong>@key="@dataItem"</strong> /&gt;
+    &lt;/Template&gt;
+&lt;/GridColumn&gt;
+</code></pre>
+            </td>
+        </tr>
+    </tbody>
+</table>
 
 ## TextArea
 
