Fix code snippets

--- a/upgrade/breaking-changes/7-0-0.md
+++ b/upgrade/breaking-changes/7-0-0.md
@@ -56,24 +56,24 @@ The obsolete `ClearButton` parameter is removed. Use `ShowClearButton` instead.
     <tbody>
         <tr>
             <td style="vertical-align:top">
-<pre><code>
-&lt;GridColumn&gt;
-    &lt;Template&gt;
+````RAZOR.skip-repl
+<GridColumn>
+    <Template>
         @{ var dataItem = (GridModel)context; }
-        &lt;ChildComponent /&gt;
-    &lt;/Template&gt;
-&lt;/GridColumn&gt;
-</code></pre>
+        <ChildComponent />
+    </Template>
+</GridColumn>
+````
             </td>
             <td style="vertical-align:top">
-<pre><code>
-&lt;GridColumn&gt;
-    &lt;Template&gt;
+````RAZOR.skip-repl
+<GridColumn>
+    <Template>
         @{ var dataItem = (GridModel)context; }
-        &lt;ChildComponent <strong>@key="@dataItem"</strong> /&gt;
-    &lt;/Template&gt;
-&lt;/GridColumn&gt;
-</code></pre>
+        <ChildComponent <strong>@key="@dataItem"</strong> />
+    </Template>
+</GridColumn>
+````
             </td>
         </tr>
     </tbody>
