--- a/upgrade/rendering-changes/4-3-0.md
+++ b/upgrade/rendering-changes/4-3-0.md
@@ -43,16 +43,16 @@ The built-in icons in Telerik UI for Blazor will now render with different HTML 
     <tbody>
         <tr>
             <td style="vertical-align:top">
-<pre><code>
-&lt;span class="k-icon k-i-camera"&gt;&lt;/span&gt;
-</code></pre>
+````RAZOR.skip-repl
+<span class="k-icon k-i-camera"></span>
+````
             </td>
             <td style="vertical-align:top">
-<pre><code>
-&lt;span class="k-svg-icon k-svg-i-camera"&gt;
-    &lt;svg&gt;...&lt;/svg&gt;
-&lt;/span&gt;
-</code></pre>
+````RAZOR.skip-repl
+<span class="k-svg-icon k-svg-i-camera">
+    <svg>...</svg>
+</span>
+````
             </td>
         </tr>
     </tbody>
