--- a/upgrade/rendering-changes/4-6-0.md
+++ b/upgrade/rendering-changes/4-6-0.md
@@ -34,16 +34,16 @@ The CSS classes applied to the built-in Font and SVG icons will be unified to in
     <tbody>
         <tr>
             <td style="vertical-align:top">
-<pre><code>
-&lt;span class="k-icon k-i-home"&gt;&lt;/span&gt;
-&lt;span class="k-svg-icon k-svg-i-home"&gt;&lt;/span&gt;
-</code></pre>
+````RAZOR.skip-repl
+<span class="k-icon k-i-home"></span>
+<span class="k-svg-icon k-svg-i-home"></span>
+````
             </td>
             <td style="vertical-align:top">
-<pre><code>
-&lt;span class="k-icon k-font-icon k-i-home"&gt;&lt;/span&gt;
-&lt;span class="k-icon k-svg-icon k-svg-i-home"&gt;&lt;/span&gt;
-</code></pre>
+````RAZOR.skip-repl
+<span class="k-icon k-font-icon k-i-home"></span>
+<span class="k-icon k-svg-icon k-svg-i-home"></span>
+````
             </td>
         </tr>
     </tbody>
