Fix broken code snippet

--- a/upgrade/breaking-changes/7-0-0.md
+++ b/upgrade/breaking-changes/7-0-0.md
@@ -73,7 +73,7 @@ The obsolete `ClearButton` parameter is removed. Use `ShowClearButton` instead.
 <GridColumn>
     <Template>
         @{ var dataItem = (GridModel)context; }
-        <ChildComponent <strong>@key="@dataItem"</strong> />
+        <ChildComponent @key="@dataItem" />
     </Template>
 </GridColumn>
 ````
